# dotmesh-to-geojson

./: .gitignore  README.md  setup.cfg  setup.py  zappa_settings.toml.in
.github/workflows/: pytest.yml
dotmeshgj/: __init__.py  app.py  flask_api.py  routes.py  schemas.py  spec.py
dotmeshgj/templates/: apidoc.html
examples/: demo.ipynb
tests/: conftest.py  test_apidoc.py  test_convert.py
