[metadata]
name = dotmeshgj
author = Jonas Sølvsteen
author_email = josl@dhigroup.com
description = .mesh to convex hull GeoJSON

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    # needs boto3
    flask
    flask-cors
    marshmallow>=3.5
    shapely
    scipy
    pyyaml
    webargs
    apispec
    apispec_webframeworks
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
deploy =
    awscli
    zappa
test =
    pytest
    pytest-cov
    pytest-flake8

[files]
packages = dotmeshgj
package-data = 
    dotmeshgj =
        templates/*.html
        static/*.js
        static/*.ico

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # line break before binary operator
    W503
    # missing whitespace after ,
    E231
exclude=
    .eggs
    doc
